<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start.StartFragment"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/view_nap"
        android:layout_marginBottom="32dp"
        android:text="@string/start_title"
        android:textAlignment="center"
        android:textAppearance="@style/Display2"
        android:textColor="@color/white" />


    <View
        android:id="@+id/view_nap"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/start_nap_button"
        android:textAlignment="center"
        android:textAppearance="@style/Display3"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_nap"
        android:layout_marginTop="32dp"
        android:text="@string/start_description"
        android:textAlignment="center"
        android:textAppearance="@style/Headline"
        android:textColor="@color/white" />


</RelativeLayout>