<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- POWER. -->
    <LinearLayout
        android:id="@+id/layout_power"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/all_power"
                android:textAppearance="@style/Display3"
                android:textColor="@color/power" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/power"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/all_power_duration"
                android:textAlignment="center"
                android:textAppearance="@style/Display1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/all_power_description"
                android:textAppearance="@style/Headline"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/button_power"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:src="@drawable/baseline_navigate_next_white_48" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/power" />

    <!-- REFRESH. -->
    <LinearLayout
        android:id="@+id/layout_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_refresh" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/all_refresh"
                android:textAppearance="@style/Display3"
                android:textColor="@color/refresh" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/refresh"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/all_refresh_duration"
                android:textAlignment="center"
                android:textAppearance="@style/Display1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/all_refresh_description"
                android:textAppearance="@style/Headline"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/button_refresh"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:src="@drawable/baseline_navigate_next_white_48" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/refresh" />

    <!-- RECHARGE. -->
    <LinearLayout
        android:id="@+id/layout_recharge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_recharge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/all_recharge"
                android:textAppearance="@style/Display3"
                android:textColor="@color/recharge" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/recharge"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/all_recharge_duration"
                android:textAlignment="center"
                android:textAppearance="@style/Display1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/all_recharge_description"
                android:textAppearance="@style/Headline"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/button_recharge"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:src="@drawable/baseline_navigate_next_white_48" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/recharge" />

    <!-- Coffee. -->
    <LinearLayout
        android:id="@+id/layout_coffee"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_coffee" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/all_coffee"
                android:textAppearance="@style/Display3"
                android:textColor="@color/coffee" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/coffee"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/all_coffee_duration"
                android:textAlignment="center"
                android:textAppearance="@style/Display1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/all_coffee_description"
                android:textAppearance="@style/Headline"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/button_coffee"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:src="@drawable/baseline_navigate_next_white_48" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/coffee" />


</LinearLayout>